# LocalLLMApi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build.bat  dockerwipe.bat  payloads.py  pyproject.toml  run.bat  runlocal.bat  utils.py  whale.bat  whalestop.bat
app/: app.py  payloads.py  utils.py
testing/: payloads.json  test.ipynb  utils.py
